turtleart.house.House.scala.error
Erreur de compilation :
House:8: error: '=' expected but '(' found.
def triangle:Unit(n) = {
                 ^House:15: error: illegal start of simple expression
def carre:Unit(n) = {
^House:15: error: '=' expected but '(' found.
def carre:Unit(n) = {
              ^House:22: error: illegal start of simple expression
}
^